--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.6.8",
     "i18next": "^23.11.2",
     "i18next-xhr-backend": "^3.2.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
